# drifter

./: .gitignore  Cargo.toml  README.md  config.toml  drifter_config.toml
.cargo-husky/hooks/: commit-msg
docs/: DESIGN_DOCUMENT.md
drifter_cli/: Cargo.toml
drifter_cli/src/: main.rs
drifter_core/: Cargo.toml
drifter_core/src/: config.rs  corpus.rs  executor.rs  feedback.rs  input.rs  lib.rs  main.rs  mutator.rs  observer.rs  oracle.rs  scheduler.rs
test_targets/: test_target_crash.sh  test_target_exit_code_crash.sh  test_target_file_check.sh  test_target_ok.sh  test_target_reads_file.sh  test_target_signal_crash.sh  test_target_stdin_check.sh  test_target_stdio.sh  test_target_timeout.sh
