[package]
name = "drifter_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0" #
rand_chacha = "0.9.0"
md5 = "0.7.0"
thiserror = "2.0.12"
tempfile = "3.19.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
bincode = { version = "2.0.1", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
rand_core = "0.9.3"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
